--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "vue": "2.6.10",
     "vue-count-to": "1.0.13",
     "vue-echarts": "^6.0.0-rc.6",
+    "vue-i18n": "^8.25.0",
     "vue-router": "3.0.2",
     "vue-splitpane": "1.0.4",
     "vuedraggable": "2.20.0",
