--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   "dependencies": {
     "axios": "0.18.1",
     "babel-polyfill": "^6.26.0",
+    "body-parser": "^1.19.0",
     "clipboard": "2.0.4",
     "codemirror": "5.45.0",
     "core-js": "3.6.5",
     "driver.js": "0.9.5",
     "dropzone": "5.5.1",
     "element-ui": "^2.13.2",
+    "express": "^4.17.1",
     "file-saver": "2.0.1",
     "fuse.js": "3.4.4",
     "js-cookie": "2.2.0",
