--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "express": "^4.17.1",
     "file-saver": "2.0.1",
     "fuse.js": "3.4.4",
+    "html2canvas": "^1.3.2",
     "js-cookie": "2.2.0",
     "jsencrypt": "^3.2.0",
     "jsonlint": "1.6.3",
+    "jspdf": "^2.3.1",
     "jszip": "3.2.1",
+    "lodash": "^4.17.21",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
@@ -40,7 +43,7 @@
     "tui-editor": "1.3.3",
     "vue": "2.6.10",
     "vue-count-to": "1.0.13",
-    "vue-echarts": "^6.0.0-rc.6",
+    "vue-echarts": "^6.0.0",
     "vue-i18n": "^8.25.0",
     "vue-router": "3.0.2",
     "vue-splitpane": "1.0.4",
@@ -49,7 +52,8 @@
     "webpack": "^4.41.5",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0",
-    "xlsx": "0.14.1"
+    "xlsx": "^0.14.1",
+    "xlsx-style": "^0.8.13"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.4.4",
@@ -64,7 +68,7 @@
     "chalk": "2.4.2",
     "chokidar": "2.1.5",
     "connect": "3.6.6",
-    "echarts": "^4.2.1",
+    "echarts": "^4.9.0",
     "eslint": "6.7.2",
     "eslint-plugin-vue": "6.2.2",
     "html-webpack-plugin": "3.2.0",
