--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "core-js": "3.6.5",
     "driver.js": "0.9.5",
     "dropzone": "5.5.1",
+    "echarts": "^4.9.0",
+    "echarts-wordcloud": "^1.1.3",
     "element-ui": "^2.13.2",
     "express": "^4.17.1",
     "file-saver": "2.0.1",
@@ -68,7 +70,6 @@
     "chalk": "2.4.2",
     "chokidar": "2.1.5",
     "connect": "3.6.6",
-    "echarts": "^4.9.0",
     "eslint": "6.7.2",
     "eslint-plugin-vue": "6.2.2",
     "html-webpack-plugin": "3.2.0",
@@ -76,6 +77,9 @@
     "lint-staged": "8.1.5",
     "mockjs": "1.0.1-beta3",
     "plop": "2.3.0",
+    "postcss-custom-properties": "^10.0.0",
+    "postcss-loader": "^6.1.1",
+    "resize-observer-polyfill": "^1.5.1",
     "runjs": "4.3.2",
     "sass": "1.26.2",
     "sass-loader": "8.0.2",
